// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils/preview-tokens > buildPreviewScope > builds a forced dark scope 1`] = `
{
  "--color-preview-100-dark-hex": "#790014",
  "--color-preview-100-dark-oklch": "oklch(35.088% 0.15885 19.9)",
  "--color-preview-100-light-hex": "#790014",
  "--color-preview-100-light-oklch": "oklch(35.088% 0.15885 19.9)",
  "--color-preview-200-dark-hex": "#a4001e",
  "--color-preview-200-dark-oklch": "oklch(43.878% 0.19864 19.9)",
  "--color-preview-200-light-hex": "#a4001e",
  "--color-preview-200-light-oklch": "oklch(43.878% 0.19864 19.9)",
  "--color-preview-300-dark-hex": "#d00029",
  "--color-preview-300-dark-oklch": "oklch(52.343% 0.23697 19.9)",
  "--color-preview-300-light-hex": "#d00029",
  "--color-preview-300-light-oklch": "oklch(52.343% 0.23697 19.9)",
  "--color-preview-400-dark-hex": "#f4003c",
  "--color-preview-400-dark-oklch": "oklch(60.453% 0.254 19.9)",
  "--color-preview-400-light-hex": "#f4003c",
  "--color-preview-400-light-oklch": "oklch(60.453% 0.254 19.9)",
  "--color-preview-50-dark-hex": "#4e0009",
  "--color-preview-50-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-50-light-hex": "#4e0009",
  "--color-preview-50-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-500-dark-hex": "#ff2d53",
  "--color-preview-500-dark-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff2d53",
  "--color-preview-500-light-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#ff747c",
  "--color-preview-600-dark-oklch": "oklch(75.426% 0.1897 19.9)",
  "--color-preview-600-light-hex": "#ff747c",
  "--color-preview-600-light-oklch": "oklch(75.426% 0.1897 19.9)",
  "--color-preview-700-dark-hex": "#ffa1a2",
  "--color-preview-700-dark-oklch": "oklch(82.157% 0.12931 19.9)",
  "--color-preview-700-light-hex": "#ffa1a2",
  "--color-preview-700-light-oklch": "oklch(82.157% 0.12931 19.9)",
  "--color-preview-800-dark-hex": "#ffc4c2",
  "--color-preview-800-dark-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-800-light-hex": "#ffc4c2",
  "--color-preview-800-light-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-900-dark-hex": "#ffdfdd",
  "--color-preview-900-dark-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-900-light-hex": "#ffdfdd",
  "--color-preview-900-light-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-950-dark-hex": "#fff0f0",
  "--color-preview-950-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-950-light-hex": "#fff0f0",
  "--color-preview-950-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-dark-hex": "#ff2d53",
  "--color-preview-dark-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff2d53",
  "--color-preview-light-oklch": "oklch(68.165% 0.254 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > builds a forced light scope 1`] = `
{
  "--color-preview-100-dark-hex": "#ffdfdd",
  "--color-preview-100-dark-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-100-light-hex": "#ffdfdd",
  "--color-preview-100-light-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-200-dark-hex": "#ffc4c2",
  "--color-preview-200-dark-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-200-light-hex": "#ffc4c2",
  "--color-preview-200-light-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-300-dark-hex": "#ffa1a2",
  "--color-preview-300-dark-oklch": "oklch(82.157% 0.12931 19.9)",
  "--color-preview-300-light-hex": "#ffa1a2",
  "--color-preview-300-light-oklch": "oklch(82.157% 0.12931 19.9)",
  "--color-preview-400-dark-hex": "#ff747c",
  "--color-preview-400-dark-oklch": "oklch(75.426% 0.1897 19.9)",
  "--color-preview-400-light-hex": "#ff747c",
  "--color-preview-400-light-oklch": "oklch(75.426% 0.1897 19.9)",
  "--color-preview-50-dark-hex": "#fff0f0",
  "--color-preview-50-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#ff2d53",
  "--color-preview-500-dark-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff2d53",
  "--color-preview-500-light-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#f4003c",
  "--color-preview-600-dark-oklch": "oklch(60.453% 0.254 19.9)",
  "--color-preview-600-light-hex": "#f4003c",
  "--color-preview-600-light-oklch": "oklch(60.453% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#d00029",
  "--color-preview-700-dark-oklch": "oklch(52.343% 0.23697 19.9)",
  "--color-preview-700-light-hex": "#d00029",
  "--color-preview-700-light-oklch": "oklch(52.343% 0.23697 19.9)",
  "--color-preview-800-dark-hex": "#a4001e",
  "--color-preview-800-dark-oklch": "oklch(43.878% 0.19864 19.9)",
  "--color-preview-800-light-hex": "#a4001e",
  "--color-preview-800-light-oklch": "oklch(43.878% 0.19864 19.9)",
  "--color-preview-900-dark-hex": "#790014",
  "--color-preview-900-dark-oklch": "oklch(35.088% 0.15885 19.9)",
  "--color-preview-900-light-hex": "#790014",
  "--color-preview-900-light-oklch": "oklch(35.088% 0.15885 19.9)",
  "--color-preview-950-dark-hex": "#4e0009",
  "--color-preview-950-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-950-light-hex": "#4e0009",
  "--color-preview-950-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-dark-hex": "#ff2d53",
  "--color-preview-dark-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff2d53",
  "--color-preview-light-oklch": "oklch(68.165% 0.254 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > locks very dark colors (l <= 0.3) to the light scale on both slots 1`] = `
{
  "--color-preview-100-dark-hex": "#ffdfdd",
  "--color-preview-100-dark-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-100-light-hex": "#ffdfdd",
  "--color-preview-100-light-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-200-dark-hex": "#ffc4c2",
  "--color-preview-200-dark-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-200-light-hex": "#ffc4c2",
  "--color-preview-200-light-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-300-dark-hex": "#ffa8a8",
  "--color-preview-300-dark-oklch": "oklch(82.157% 0.108 19.9)",
  "--color-preview-300-light-hex": "#ffa8a8",
  "--color-preview-300-light-oklch": "oklch(82.157% 0.108 19.9)",
  "--color-preview-400-dark-hex": "#ec9393",
  "--color-preview-400-dark-oklch": "oklch(75.426% 0.108 19.9)",
  "--color-preview-400-light-hex": "#ec9393",
  "--color-preview-400-light-oklch": "oklch(75.426% 0.108 19.9)",
  "--color-preview-50-dark-hex": "#fff0f0",
  "--color-preview-50-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#d37d7d",
  "--color-preview-500-dark-oklch": "oklch(68.165% 0.108 19.9)",
  "--color-preview-500-light-hex": "#d37d7d",
  "--color-preview-500-light-oklch": "oklch(68.165% 0.108 19.9)",
  "--color-preview-600-dark-hex": "#b96567",
  "--color-preview-600-dark-oklch": "oklch(60.453% 0.108 19.9)",
  "--color-preview-600-light-hex": "#b96567",
  "--color-preview-600-light-oklch": "oklch(60.453% 0.108 19.9)",
  "--color-preview-700-dark-hex": "#9f4e50",
  "--color-preview-700-dark-oklch": "oklch(52.343% 0.108 19.9)",
  "--color-preview-700-light-hex": "#9f4e50",
  "--color-preview-700-light-oklch": "oklch(52.343% 0.108 19.9)",
  "--color-preview-800-dark-hex": "#833539",
  "--color-preview-800-dark-oklch": "oklch(43.878% 0.108 19.9)",
  "--color-preview-800-light-hex": "#833539",
  "--color-preview-800-light-oklch": "oklch(43.878% 0.108 19.9)",
  "--color-preview-900-dark-hex": "#681c22",
  "--color-preview-900-dark-oklch": "oklch(35.088% 0.108 19.9)",
  "--color-preview-900-light-hex": "#681c22",
  "--color-preview-900-light-oklch": "oklch(35.088% 0.108 19.9)",
  "--color-preview-950-dark-hex": "#4c000c",
  "--color-preview-950-dark-oklch": "oklch(26% 0.108 19.9)",
  "--color-preview-950-light-hex": "#4c000c",
  "--color-preview-950-light-oklch": "oklch(26% 0.108 19.9)",
  "--color-preview-dark-hex": "#d37d7d",
  "--color-preview-dark-oklch": "oklch(68.165% 0.108 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#d37d7d",
  "--color-preview-light-oklch": "oklch(68.165% 0.108 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > locks very light colors (l >= 0.9) to the dark scale on both slots 1`] = `
{
  "--color-preview-100-dark-hex": "#562d2e",
  "--color-preview-100-dark-oklch": "oklch(35.088% 0.06 19.9)",
  "--color-preview-100-light-hex": "#562d2e",
  "--color-preview-100-light-oklch": "oklch(35.088% 0.06 19.9)",
  "--color-preview-200-dark-hex": "#704444",
  "--color-preview-200-dark-oklch": "oklch(43.878% 0.06 19.9)",
  "--color-preview-200-light-hex": "#704444",
  "--color-preview-200-light-oklch": "oklch(43.878% 0.06 19.9)",
  "--color-preview-300-dark-hex": "#895c5c",
  "--color-preview-300-dark-oklch": "oklch(52.343% 0.06 19.9)",
  "--color-preview-300-light-hex": "#895c5c",
  "--color-preview-300-light-oklch": "oklch(52.343% 0.06 19.9)",
  "--color-preview-400-dark-hex": "#a37373",
  "--color-preview-400-dark-oklch": "oklch(60.453% 0.06 19.9)",
  "--color-preview-400-light-hex": "#a37373",
  "--color-preview-400-light-oklch": "oklch(60.453% 0.06 19.9)",
  "--color-preview-50-dark-hex": "#3c1618",
  "--color-preview-50-dark-oklch": "oklch(26% 0.06 19.9)",
  "--color-preview-50-light-hex": "#3c1618",
  "--color-preview-50-light-oklch": "oklch(26% 0.06 19.9)",
  "--color-preview-500-dark-hex": "#bb8a8a",
  "--color-preview-500-dark-oklch": "oklch(68.165% 0.06 19.9)",
  "--color-preview-500-light-hex": "#bb8a8a",
  "--color-preview-500-light-oklch": "oklch(68.165% 0.06 19.9)",
  "--color-preview-600-dark-hex": "#d3a1a0",
  "--color-preview-600-dark-oklch": "oklch(75.426% 0.06 19.9)",
  "--color-preview-600-light-hex": "#d3a1a0",
  "--color-preview-600-light-oklch": "oklch(75.426% 0.06 19.9)",
  "--color-preview-700-dark-hex": "#e9b6b5",
  "--color-preview-700-dark-oklch": "oklch(82.157% 0.06 19.9)",
  "--color-preview-700-light-hex": "#e9b6b5",
  "--color-preview-700-light-oklch": "oklch(82.157% 0.06 19.9)",
  "--color-preview-800-dark-hex": "#fec9c8",
  "--color-preview-800-dark-oklch": "oklch(88.238% 0.06 19.9)",
  "--color-preview-800-light-hex": "#fec9c8",
  "--color-preview-800-light-oklch": "oklch(88.238% 0.06 19.9)",
  "--color-preview-900-dark-hex": "#ffdfdd",
  "--color-preview-900-dark-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-900-light-hex": "#ffdfdd",
  "--color-preview-900-light-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-950-dark-hex": "#fff0f0",
  "--color-preview-950-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-950-light-hex": "#fff0f0",
  "--color-preview-950-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-dark-hex": "#bb8a8a",
  "--color-preview-dark-oklch": "oklch(68.165% 0.06 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#bb8a8a",
  "--color-preview-light-oklch": "oklch(68.165% 0.06 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > splits mid-lightness colors into distinct light and dark scales 1`] = `
{
  "--color-preview-100-dark-hex": "#790014",
  "--color-preview-100-dark-oklch": "oklch(35.088% 0.15885 19.9)",
  "--color-preview-100-light-hex": "#ffdfdd",
  "--color-preview-100-light-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-200-dark-hex": "#a4001e",
  "--color-preview-200-dark-oklch": "oklch(43.878% 0.19864 19.9)",
  "--color-preview-200-light-hex": "#ffc4c2",
  "--color-preview-200-light-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-300-dark-hex": "#d00029",
  "--color-preview-300-dark-oklch": "oklch(52.343% 0.23697 19.9)",
  "--color-preview-300-light-hex": "#ffa1a2",
  "--color-preview-300-light-oklch": "oklch(82.157% 0.12931 19.9)",
  "--color-preview-400-dark-hex": "#f4003c",
  "--color-preview-400-dark-oklch": "oklch(60.453% 0.254 19.9)",
  "--color-preview-400-light-hex": "#ff747c",
  "--color-preview-400-light-oklch": "oklch(75.426% 0.1897 19.9)",
  "--color-preview-50-dark-hex": "#4e0009",
  "--color-preview-50-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#ff2d53",
  "--color-preview-500-dark-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff2d53",
  "--color-preview-500-light-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#ff747c",
  "--color-preview-600-dark-oklch": "oklch(75.426% 0.1897 19.9)",
  "--color-preview-600-light-hex": "#f4003c",
  "--color-preview-600-light-oklch": "oklch(60.453% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#ffa1a2",
  "--color-preview-700-dark-oklch": "oklch(82.157% 0.12931 19.9)",
  "--color-preview-700-light-hex": "#d00029",
  "--color-preview-700-light-oklch": "oklch(52.343% 0.23697 19.9)",
  "--color-preview-800-dark-hex": "#ffc4c2",
  "--color-preview-800-dark-oklch": "oklch(88.238% 0.08079 19.9)",
  "--color-preview-800-light-hex": "#a4001e",
  "--color-preview-800-light-oklch": "oklch(43.878% 0.19864 19.9)",
  "--color-preview-900-dark-hex": "#ffdfdd",
  "--color-preview-900-dark-oklch": "oklch(93.442% 0.04313 19.9)",
  "--color-preview-900-light-hex": "#790014",
  "--color-preview-900-light-oklch": "oklch(35.088% 0.15885 19.9)",
  "--color-preview-950-dark-hex": "#fff0f0",
  "--color-preview-950-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-950-light-hex": "#4e0009",
  "--color-preview-950-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-dark-hex": "#ff2d53",
  "--color-preview-dark-oklch": "oklch(68.165% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff2d53",
  "--color-preview-light-oklch": "oklch(68.165% 0.254 19.9)",
}
`;
